--- a/index.html
+++ b/index.html
@@ -7,33 +7,48 @@
   <meta name="keywords" content="stats, preview, card, component">
   <meta name="description" content="Stats preview card component">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="scss/main.css">
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
 <body>
 <main>
   <div class="container">
-    <div class="left"></div>
-    <div class="right"></div>
+    <div class="left">
+      <div class="text">
+        <h1 class="title">Get <span>insights</span> that help <br> your business grow.</h1>
+        <p class="subTitle">
+          Discover the benefits of data analytics and make better decisions regarding revenue, customer <br>
+          experience, and overall efficiency.
+        </p><!--/subTitle-->
+      </div><!--/text-->
+      <div class="grid">
+        <div class="item">
+          <p>10k+</p>  
+          <span>companies</span></div>
+        <div class="item">
+          <p>314</p> 
+         <span>templates</span> 
+        </div>
+        <div class="item">
+          <p>12m+</p> 
+          <span>queries</span>
+        </div>
+      </div><!--/grid-->
+    </div><!--/left-->
+    <div class="right">
+      <div class="overlay"></div><!--/overlay-->
+    </div><!--/right-->
   </div><!--/container-->
 </main>
 
 
-
-
-
-
-
   <!--
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
