--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
 <body>
+<header>
+  <div class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      &nbsp Coded by <a href="#">Thiago Tesche</a>.
+      &nbsp <a href="https://github.com/ThiagoTesche" target="_blank"><i>My GitHub </i></a>
+  </p>
+  </div>
+</header>
 <main>
   <div class="container">
     <div class="left">
@@ -46,13 +54,6 @@
     </div><!--/right-->
   </div><!--/container-->
 </main>
-
-
-  <!--
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 </body>
